# ComfyUI_to_webui

./: .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  DEADLOCK_FIX.md  LICENSE  PHASE3_COMPLETE.md  README.md  __init__.py  config.py  gradio_app.py  gradio_cancel_test.py  gradio_workflow.py  hua_nodes.py  hua_word_image.py  image_history.json  last_successful_settings.json  output_image_to_gradio.py  output_video_to_gradio.py  pyproject.toml  requirements.txt  test_phase1.py
ComfyUI_to_webui_v2/: PHASE1_COMPLETE.md  __init__.py  gradio_app.py
Sample_preview/: 1.5图生图gradio.json  1.5或sdxl文生图支持中文dreamshaper_00000_.json  flux_ Lineart_controlnet.json  flux_4K放大_封装lora.json  flux_depth_controlnet.json  flux_resolution.txt  flux分辨率列表.txt  flux批量分镜.json  flux批量分镜无lora.json  flux文生图_支持中文00000_.json  flux风格转化_gradio封装.json  sdxl_1_5_resolution.txt  v3.1.0_multiple_instances_with_lettering.json  v3.json  分辨率生成.py  可绘本ACE++ 结合 Redux溶图_封装_优化.json  图反推提示flux.json  图生视频frame pack_gradio.json  实例文生图封装.json  封装视频转绘流.json  封装视频转绘流_全局绘制.json  思维导图示例.json  手搓检测模型和图片.json  文生视频frame pack_gradio.json  更改comfyui界面节点ID显示示例.py  条形码封装.json  条形码生成工作流.json  检测全局任务进度调示例.py  用ai编写的提示词记录  轮询日志示例.py  重启api测试实例.py
core/: comfyui_client.py  execution_engine.py  ui_generator.py
features/: civitai_browser.py  live_preview.py
js/: hualogo.js  icon.js  video.js
kelnel_ui/: api_json_manage.py  css_html_js.py  gradio_cancel_test.py  k_Preview.py  system_monitor.py  ui_def.py
node/: deepseek_api.py  hua_icons.py  hua_nodes.py  hua_word_image.py  hua_word_models.py  mind_map.py  (+2 more)
utils/: image_utils.py  (+3 more)
(+17 files in other folders)
