[project]
name = "ComfyUI_to_webui"
description = "Encapsulate the comfyui workflow as a gradio webui"
version = "1.3.3"
license = {file = "LICENSE"}
dependencies = ["gradio>=3.0", "Pillow", "python-barcode", "numpy", "websocket", "requests", "imageio[ffmpeg]"]

[project.urls]
Repository = "https://github.com/kungful/ComfyUI_to_webui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hua"
DisplayName = "ComfyUI_to_webui"
Icon = ""
